Audio Player: Support 2X speed and mute; Audio: Fix width on mobile (#1533)

--- a/src/components/middle/AudioPlayer.scss
+++ b/src/components/middle/AudioPlayer.scss
@@ -105,6 +105,22 @@
     }
   }
 
+  .playback-button {
+    &.applied {
+      --color-text-secondary: var(--color-primary);
+    }
+
+    .playback-button-inner {
+      transition: 0.2s color ease-in-out;
+      font-size: 0.75rem;
+      font-weight: bold;
+      border: 2px solid;
+      border-radius: 0.375rem;
+      padding: 0.15rem 0.25rem;
+      font-variant-numeric: tabular-nums;
+    }
+  }
+
   &-content {
     display: flex;
     justify-content: center;
