--- a/src/components/middle/message/_message-content.scss
+++ b/src/components/middle/message/_message-content.scss
@@ -337,6 +337,10 @@
     min-width: 20rem;
     padding: .5rem .5rem .8125rem !important;
 
+    @media (max-width: 600px) {
+      min-width: 17rem;
+    }
+
     .Audio + .text-content {
       margin-top: .25rem;
     }
